2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>

	* themes.c (properties_cb): Put the treeview
	in a scrolled window and make the dialog a tad
	bigger so everything fits better in it.

2004-03-17  Glynn Foster  <glynn.foster@sun.com>

	* docs/ja/*: Put back ja docs since the original
	author never got back to me.

2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* docs/Makefile.am: Add l10n'd docs to the build.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*.sgml: Remove the old sgml stuff, we don't
	need it anymore.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Localized online documentation from the 
	Sun translation team for de, es, fr, it, ko, sv
	zh_CN, zh_HK and zh_TW.

2004-02-29  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (applet_back_change):
	Removed bogus return.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.h: Bumping up MAX_EYES hard limit
	to 1000. 100 eyes seem to fit with a high
	resolution.

2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (applet_back_change):
	Cleaned up and fixed transparency for color
	background panels.

	(applet_set_back_pixmap):
	Cleaned up, trying to get panel pixmap
	backgrounds working. Still crashes tho.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (about_cb):
	Set the right screen when the user requests
	the about dialog and it's already there
	but not on the right screen.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (destroy_cb): Destroy the eye
	box and GtkWidget eye array.

	(destroy_eyes):
	Free the GtkWidget eye array.

	(setup_eyes):
	Allocate memory for the eye array.

	* geyes.h: Changed GtkWidget *eyes[MAX_EYES] into
	GtkWidget **eyes within the EyesApplet structure.

	Bumped MAX_EYES up to 100 which is basicly sanity
	because themes with such a great number of eyes are
	insane anyway.

	* themes.c (parse_theme_file):
	Check if the eyes in the theme is above MAX_EYES. If