@@ -1,3 +1,9 @@
+2004-08-15  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* geyes.h: ANSI this.
+	* themes.c: (theme_dirs_create): ANSI that. Also
+	static something == FALSE is bad. Add gboolean to that.
+
 2004-06-09  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* themes.c (properties_cb): Put the treeview
